--- a/Keven_Souza_Nogueira/calculadoramvc/src/main/resources/templates/page.qute.html
+++ b/Keven_Souza_Nogueira/calculadoramvc/src/main/resources/templates/page.qute.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
-    <title>Hello {name ?: "Qute"}</title>
+    <title>Calculadora MVC</title>
     <style>
         body {
             background-color: #000;
             color: #fff;
         }
+
         h1 {
             color: #4695EB;
             font-size: 6vw;
@@ -20,11 +22,47 @@
         p {
             font-size: 2vw;
         }
+
+        form.calc-numbers {
+            display: table;
+        }
+
+        div.calc-numbers {
+            display: table-row;
+        }
+
+        label,
+        input {
+            display: table-cell;
+            margin-bottom: 10px;
+        }
+
+        label {
+            padding-right: 10px;
+        }
     </style>
 </head>
-<body>
-<h1>Hello <b>{name ?: "Qute"}</b></h1>
 
-<p>Create your web page using Quarkus RESTEasy & Qute</p>
+<body>
+    <form action="/calculadora" method="get" class="calc-numbers">
+        <div class="calc-numbers">
+            <label for="valor1">Digite o primeiro número: </label>
+            <input type="text" name="valor1" id="valor1"/>
+        </div>
+        <div class="calc-numbers">
+            <label for="valor2">Digite o segundo número:</label>
+            <input type="text" name="valor2" id="valor2"/>
+        </div>
+        <div class="calc-numbers">
+            <label for="operacoes">Digite a operação matemática:</label>
+            {#for item in items}
+                {item.name}
+            {/for}
+        </div>
+        <div class="calc-numbers">
+            <input type="submit" value="Calcular" />
+        </div>
+    </form>
 </body>
+
 </html>
