--- a/Leonardo_Higa/calculadoramvc/src/main/resources/templates/page.qute.html
+++ b/Leonardo_Higa/calculadoramvc/src/main/resources/templates/page.qute.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Hello {name ?: "Qute"}</title>
+    <title>Calculadora {name ?: "MVP"}</title>
     <style>
         body {
             background: rgb(9, 9, 121);
@@ -17,17 +17,37 @@
         }
 
         h1 b {
-            color: #be9100;
+            color: #ededee;
         }
 
         p {
             font-size: 2vw;
         }
+        .titulo{
+            color:#4695EB;
+        }
     </style>
 </head>
-
+                                    
 <body>
-    <h1>Hello <b>{result}</b></h1>
+    <h1 class="titulo">Resultado: <b>{result}</b></h1>
+
+    <form action="/calculadora" method="POST">
+        <label>
+            Valor 1
+        </label>
+        <input name="valor1" />
+        <br />
+        <br />
+        <label>
+            Valor 2
+        </label>
+        <input name="valor2" />
+        <br />
+        <br />
+        <button>Calcular</button>
+
+    </form> 
 
     <p>Create your web page using Quarkus RESTEasy & Qute</p>
 </body>
