--- a/Caua_Eduardo_K_Schadeck/calculadora_mvc/src/main/resources/templates/page.qute.html
+++ b/Caua_Eduardo_K_Schadeck/calculadora_mvc/src/main/resources/templates/page.qute.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
-    <title>Hello {name ?: "Qute"}</title>
+    <title>Resultado: {result ?: "Qute"}</title>
     <style>
         body {
             background-color: #000;
             color: #fff;
         }
+
         h1 {
             color: #4695EB;
             font-size: 6vw;
@@ -22,9 +24,33 @@
         }
     </style>
 </head>
-<body>
-<h1>Hello <b>{name ?: "Qute"}</b></h1>
 
-<p>Create your web page using Quarkus RESTEasy & Qute</p>
+<body>
+    <h1>Resultado: <b>{result ?: "Qute"}</b></h1>
+
+    <form action="/calculadora" method="POST">
+        <label>
+            Valor 1
+        </label>
+        <input name="valor1" />
+        <br />
+        <br />
+        <label>
+            Valor 2
+        </label>
+        <input name="valor2" />
+        <select name="escolha a operação">
+            <option value="addition">Somar</option>
+            <option value="subtraction">Subtração</option>
+            <option value="division">Divisão</option>
+            <option value="multiplication">Multiplicação</option>
+        </select>
+        
+        <button>Calcular</button>
+    </form>
+    <br />
+
+    <p>Informe dois número e escolha a operação para calcular</p>
 </body>
+
 </html>
