--- a/Isabelly_Vitoria_Castro/calculadoramvc/calculadoramvc/src/main/resources/templates/page.qute.html
+++ b/Isabelly_Vitoria_Castro/calculadoramvc/calculadoramvc/src/main/resources/templates/page.qute.html
@@ -3,28 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello {name ?: "Qute"}</title>
-    <style>
-        body {
-            background-color: #000;
-            color: #fff;
-        }
-        h1 {
-            color: #4695EB;
-            font-size: 6vw;
-        }
-
-        h1 b {
-            color: #be9100;
-        }
-
-        p {
-            font-size: 2vw;
-        }
-    </style>
 </head>
 <body>
-<h1>Hello <b>{name ?: "Qute"}</b></h1>
+    <div class= "quadrado" class=""><h1 class="txtcalculadora">Calculadora</h1></div>
 
-<p>Create your web page using Quarkus RESTEasy & Qute</p>
+    <div class="cssinput1">
+        <label for="numero1"></label>
+        <input type="number" id="numero1" max="100">
+    </div>
+
+    <div class="cssinput2">
+        <label id="teste" for="numero2">Digite o segundo valor:</label>
+        <input type="number" id="numero2" max="100">
+    </div>
+
+    <div class="buttons">
+        <button id="calcular">Calcular</button>
+    </div>
+
+    <style>
+        body {
+            background: rgb(2,0,36);
+            background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(179,221,255,0.9719537473192402) 0%, rgba(141,23,223,1) 92%);
+            color: #fff;
+        }
+        .txtcalculadora {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -425%);
+            color: #3f0886;
+            font-size: 45px;
+            
+        }
+        .quadrado {
+            width: 400px;
+            height: 400px; 
+            background-color: #ecf0f3; 
+            border-radius: 25px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .cssinput1 {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -200%);
+            color: #000000;
+            font-size: large; 
+        }
+
+        .cssinput2 {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #000000;
+            font-size: large; 
+        }
+
+        .buttons {
+            position:absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, 350%);
+
+
+        }
+    </style>
 </body>
 </html>
