--- a/Patrick_Stegaribe_de_Almeida/calculadoramvc/src/main/resources/templates/page.qute.html
+++ b/Patrick_Stegaribe_de_Almeida/calculadoramvc/src/main/resources/templates/page.qute.html
@@ -3,28 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello {name ?: "Qute"}</title>
-    <style>
-        body {
-            background-color: #000;
-            color: #fff;
-        }
-        h1 {
-            color: #4695EB;
-            font-size: 6vw;
-        }
-
-        h1 b {
-            color: #be9100;
-        }
-
-        p {
-            font-size: 2vw;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Hello <b>{name ?: "Qute"}</b></h1>
 
 <p>Create your web page using Quarkus RESTEasy & Qute</p>
+
+    <div id="box">
+
+    <h1>Calculadora Simples</h1>
+    <form action="/calculator" method="post">
+        <label for="number1">Número 1:</label>
+        <input type="number" id="number1" name="number1" required>
+        <br>
+
+        <label for="number2">Número 2:</label>
+        <input type="number" id="number2" name="number2" required>
+        <br>
+
+        <label for="operation">Operação:</label>
+        <select id="operation" name="operation">
+            <option value="add">Adição (+)</option>
+            <option value="subtract">Subtração (-)</option>
+            <option value="multiply">Multiplicação (*)</option>
+            <option value="divide">Divisão (/)</option>
+        </select>
+        <br>
+
+        <button id="mandar" type="submit">Calcular</button>
+    </form>
+
+    <h2>Resultado:</h2>
+    <h2>{result}</h2>
+    </div>
+
+
 </body>
+
+<style>
+
+body{
+
+    background-color: rgb(28, 28, 28);
+
+
+}
+
+#box{
+
+position: absolute;
+background-color: rgb(44, 44, 44);
+border-radius: 1vmin;
+
+
+}
+
+#mandar{
+
+    
+
+
+}
+
+
+</style>
+
+
 </html>
