--- a/Patrick_Stegaribe_de_Almeida/calculadoramvc/src/main/resources/templates/page.qute.html
+++ b/Patrick_Stegaribe_de_Almeida/calculadoramvc/src/main/resources/templates/page.qute.html
@@ -7,34 +7,10 @@
 
     <div class="container">
         <div id="box">
-            <form action="/some-page" method="post">
-                <label for="number1">Insira o primeiro número</label>
-                <br>
-                <input class="buttons" type="number" id="number1" name="number1" required>
-                <br>
-                <br>
-                <label for="number2">Insira o segundo número</label>
-                <br>
-                <input class="buttons" type="number" id="number2" name="number2" required>
-                <br>
-                <br>
-                <select class="buttons" id="operation" name="operation">
-                    <option value="add">Soma</option>
-                    <option value="sub">Subtração</option>
-                    <option value="multi">Multiplicação</option>
-                    <option value="divi">Divisão</option>
-                </select>
-                <br>
-                <br>
-                <br>
-                <button id="mandar" type="submit">Calcular</button>
-            </form>
-        </div>
-    
-        <div id="boxh">
-            <h2>Resultado é {result}</h2>
-            <button id="voltar" type="button">Voltar</button>
-        </div>
+            <div id="boxh">
+                <h2>Resultado é {result}</h2>
+                <button id="voltar" type="button" action="/hello">Voltar</button>
+            </div>
     </div>
     
 
@@ -64,23 +40,6 @@ body{
     align-content: center;
     justify-content: center;
     align-items: center;
-
-}
-
-#box{
-
-    display: block;
-    border-radius: 1vmin;
-    width: 300px;
-    height: 300px;
-    background: #fff;
-    padding: 7vh;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-
 
 }
 
@@ -126,50 +85,20 @@ label, h2{
 
 <script>
     document.addEventListener("DOMContentLoaded", function () {
-        const form = document.querySelector("form");
-        const boxDiv = document.getElementById("box");
+
         const boxhDiv = document.getElementById("boxh");
-        let result = null; // Inicialize a variável result com null
-    
-        form.addEventListener("submit", async function (event) {
-        //event.preventDefault(); // Evita o envio padrão do formulário
-
-        const formData = new FormData(form);
-        const formBody = new URLSearchParams(formData).toString();
-
-        const response = await fetch("/some-page", {
-            method: "POST",
-            body: formBody,
-            headers: {
-                "Content-Type": "application/x-www-form-urlencoded",
-            },
-        });
-
-        if (response.ok) {
-            
-            result = await response.text();
-            console.log(`Novo valor de result: ${result}`);
-            
-            
-        }
-
-        
-
-    });
-
 
     
         // Lidar com o botão "Voltar"
         const voltarButton = document.getElementById("voltar");
         voltarButton.addEventListener("click", function () {
-            
-            boxDiv.style.visibility = "visible";
-            boxhDiv.style.visibility = "hidden";
+ 
+            window.location.href = "hello";
             
             
         });
     });
-    </script>
+</script>
     
     
     
