--- a/Lucas_Kovaleski/calculadoramvc/calculadoramvc/src/main/resources/templates/resultado.qute.html
+++ b/Lucas_Kovaleski/calculadoramvc/calculadoramvc/src/main/resources/templates/resultado.qute.html
@@ -72,13 +72,14 @@
     
 </head>
 <body>
-    <div id="tela_dois">
+    <form id="tela_dois" method="get" action="/calculadora">
         <div id="outra">
-        <img src="https://i.imgur.com/RwqQtcy.png" alt="Logo Eng. Software Fag">
-        <p id="titulo">Calculadora do Qute</p>
-        <p id="resultado">Resultado é 5.00</p>
-        <input type="submit" value="Voltar" id="voltar"/>
-    </div>
-    </div>
+            <img src="https://i.imgur.com/RwqQtcy.png" alt="Logo Eng. Software Fag">
+            <p id="titulo">Calculadora do Qute</p>
+            <p id="resultado">Resultado é {resultadoOperacao}.</p>
+            <input type="submit" value="Voltar" id="voltar"/>
+        </div>
+    </form>
+   
 </body>
 </html>
