--- a/Caua_Eduardo_K_Schadeck/calculadora_mvc/src/main/resources/templates/page.qute.html
+++ b/Caua_Eduardo_K_Schadeck/calculadora_mvc/src/main/resources/templates/page.qute.html
@@ -39,7 +39,7 @@
             Valor 2
         </label>
         <input name="valor2" />
-        <select name="escolha a operação">
+        <select name="opcao">
             <option value="addition">Somar</option>
             <option value="subtraction">Subtração</option>
             <option value="division">Divisão</option>
