--- a/Isabelly_Vitoria_Castro/calculadoramvc/calculadoramvc/src/main/resources/templates/page.qute.html
+++ b/Isabelly_Vitoria_Castro/calculadoramvc/calculadoramvc/src/main/resources/templates/page.qute.html
@@ -18,14 +18,14 @@
         </div>
 
         <select name="operation" class="operacao">
-            <option value="add">Somar</option>
-            <option value="subtract">Subtrair</option>
-            <option value="multiply">Multiplicar</option>
-            <option value="divide">Dividir</option>
+            <option value="somar">Somar</option>
+            <option value="subtrair">Subtrair</option>
+            <option value="multiplicar">Multiplicar</option>
+            <option value="dividir">Dividir</option>
         </select><br>   
 
 
-        <div class="buttons">
+        <div class="botao">
             <input type="submit" value= "Calcular">
         </div>
 
@@ -74,7 +74,7 @@
             font-size: large; 
         }
 
-        .buttons {
+        .botao {
             position:absolute;
             top: 50%;
             left: 50%;
