--- a/Isabelly_Vitoria_Castro/calculadoramvc/calculadoramvc/src/main/resources/templates/result.html
+++ b/Isabelly_Vitoria_Castro/calculadoramvc/calculadoramvc/src/main/resources/templates/result.html
@@ -8,7 +8,7 @@
 <body>
     <div class="quadrado">
         <h1 class="titulo">Resultado da Calculadora</h1>
-        <h1 class="resultado"> <b>{resultado}</b></h1>>
+        <h1 class="resultado"> <b>{resultado}</b></h1>
     </div>
 
     <style>
@@ -30,7 +30,7 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -200%);
+            transform: translate(-50%, -100%);
             color: #dc0b66;
             font-size: 30px;
         }
