--- a/Caua_Eduardo_K_Schadeck/calculadora_mvc/src/main/resources/templates/page.qute.html
+++ b/Caua_Eduardo_K_Schadeck/calculadora_mvc/src/main/resources/templates/page.qute.html
@@ -1,56 +1,101 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Resultado: {result ?: "Qute"}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculadora MVC</title>
     <style>
         body {
-            background-color: #000;
-            color: #fff;
+            background-color: #18181b;
+            background-size: 1000% 1000%;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        h1 {
-            color: #4695EB;
-            font-size: 6vw;
+        .calculator {
+            background-color: #262626;
+            color: #f8fafc;
+            border-radius: 10px;
+            padding: 40px;
+            box-shadow: 0px 20px 10px rgba(0, 0, 0, 0.2);
         }
 
-        h1 b {
-            color: #be9100;
+        .calculator h2 {
+            color: #ffffffd2;
+        }
+        .calculator h3{
+            padding: 10px;
         }
 
-        p {
-            font-size: 2vw;
+        select {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: none;
+            border-radius: 50px;
+        }
+
+        button {
+            background-color: #4800ff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #ffffff;
+        }
+
+        #resultado {
+            font-size: 24px;
+            margin-top: 10px;
+            color: #ffffff;
+        }
+
+        @keyframes gradient {
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0% 50%;
+            }
         }
     </style>
 </head>
 
 <body>
-    <h1>Resultado: <b>{result ?: "Qute"}</b></h1>
+    <div class="calculator">
+        <h2>Calculadora MVC</h2>
+        <form method="POST" action="/calculadora" enctype="application/x-www-form-urlencoded">
 
-    <form action="/calculadora" method="POST">
-        <label>
-            Valor 1
-        </label>
-        <input name="valor1" />
+        <input name="valor1" placeholder="1° Número" />
         <br />
         <br />
-        <label>
-            Valor 2
-        </label>
-        <input name="valor2" />
+        <input name="valor2" placeholder="2° Número" />
+        <h3>Selecione a operação que deseja realizar</h3>
         <select name="opcao">
             <option value="addition">Somar</option>
             <option value="subtraction">Subtração</option>
             <option value="division">Divisão</option>
             <option value="multiplication">Multiplicação</option>
         </select>
-        
-        <button>Calcular</button>
-    </form>
-    <br />
-
-    <p>Informe dois número e escolha a operação para calcular</p>
+            <button type="submit">Calcular</button>
+            <p id="resultado">{result}</p>
+        </form>
+    </div>
 </body>
 
 </html>
