--- a/Vinicius_Passos/calculadomvc/calculadomvc/src/main/resources/templates/page.qute.html
+++ b/Vinicius_Passos/calculadomvc/calculadomvc/src/main/resources/templates/page.qute.html
@@ -1,30 +1,135 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
-    <title>Hello {name ?: "Qute"}</title>
+    <title>Calculadora Mais top</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
         body {
-            background-color: #000;
-            color: #fff;
-        }
-        h1 {
-            color: #4695EB;
-            font-size: 6vw;
+            background-color: #216050;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
         }
 
-        h1 b {
-            color: #be9100;
+        h2 {
+            color: #c0914b;
+            font-size: 28px;
+        }
+        h3{
+            color: red;
         }
 
-        p {
-            font-size: 2vw;
+        label {
+            font-size: 30px;
+            color: #c0914b;
+        }
+
+        input {
+            width: 320px;
+            height: 35px;
+            background-color: rgb(234, 234, 234);
+            border-radius: 10px;
+        }
+
+        form {
+            width: 350px;
+            background-color: rgb(9, 73, 36);
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            align-items: center;
+            border-radius: 10px;
+        }
+
+        button {
+            width: 250px;
+            height: 35px;
+            background-color: #c0914b;
+            color: #e3e3e3;
+            border-radius: 10px;
+        }
+
+        select {
+            width: 250px;
+            height: 35px;
+            background-color: #bababa;
+            color: #020745;
+            border-radius: 10px;
+        }
+
+        .result {
+            padding-top: 16px;
         }
     </style>
 </head>
-<body>
-<h1>Hello <b>{name ?: "Qute"}</b></h1>
 
-<p>Create your web page using Quarkus RESTEasy & Qute</p>
+<body>
+    <form action="/CalculadoraControler" method="post">
+        <div>
+            <h2>CALCULATOR 3000MIL</h2>
+        </div>
+        <br>
+        <div>
+            <label>
+                Valor 1
+            </label>
+        </div>
+
+        <div>
+            <input name="valor1">
+        </div>
+
+        <div>
+            <label>
+                Valor 2
+            </label>
+        </div>
+        <div>
+            <input name="valor2">
+        </div>
+
+        <br>
+
+        <div>
+            <select name="opcao">
+                <option>
+                    Soma
+                </option>
+                <option>
+                    Sub
+                </option>
+                <option>
+                    Mult
+                </option>
+                <option>
+                    Div
+                </option>
+            </select>
+        </div>
+
+        <br>
+        <div>
+            <button>
+                Calcular
+            </button>
+        </div>
+        <div>
+            <h3>Mensagem: <b>{mensagem ?: "Insira um número"}</h3>
+        </div>
+        <div class="result">
+            <h2>Resultado: <b>{resultado ?: "0"} </h2>
+        </div>
+
+    </form>
 </body>
+
 </html>
