--- a/Jonathan_Leite/calculadoramvc/src/main/resources/templates/calculatorTemplate.qute.html
+++ b/Jonathan_Leite/calculadoramvc/src/main/resources/templates/calculatorTemplate.qute.html
@@ -62,15 +62,18 @@ h2 {
     color: #e74c3c;
     font-size: 24px;
     margin-top: 20px;
+    text-align: center;
 }
 
 p {
     font-size: 18px;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 p.error-message {
     color: #e74c3c;
+    text-align: center;
 }
 
    </style>
@@ -78,17 +81,17 @@ p.error-message {
 <body>
     <h1>Calculadora Web</h1>
 
-    <form id="calculator-form" action="/calculadora/calculate" method="POST">
-        <label for="first-value">Primeiro Valor:</label>
-        <input type="number" id="first-value" name="firstValue" required><br><br>
-        <label for="second-value">Segundo Valor:</label>
-        <input type="number" id="second-value" name="secondValue" required><br><br>
+    <form id="calculator-form" action="/calculadora" method="POST">
+        <label for="Primeiro">Primeiro Valor:</label>
+        <input type="number" id="Primeiro" name="valor01" required><br><br>
+        <label for="Segundo">Segundo Valor:</label>
+        <input type="number" id="Segundo" name="valor02" required><br><br>
         
-        <label for="operation">Operação:</label>
-        <select id="operation" name="operation" required>
-            <option value="add">Somar</option>
-            <option value="subtract">Subtrair</option>
-            <option value="multiply">Multiplicar</option>
+        <label for="operacao">Operação:</label>
+        <select id="operacao" name="operacao" required>
+            <option value="soma">Somar</option>
+            <option value="subtrair">Subtrair</option>
+            <option value="multiplicar">Multiplicar</option>
             <option value="divide">Dividir</option>
         </select><br><br>
 
@@ -97,10 +100,8 @@ p.error-message {
 
     <h2>Resultado:</h2>
     <p>{result}</p>
-
     
-        <p style="color: red;">{errorMessage}</p>
-   
+    <p style="color: red;">{errorMessage}</p>
 
 </body>
 </html>
