--- a/Ryan_Marcos_Amaral_Silva/calculadoramvc/src/main/resources/templates/page.qute.html
+++ b/Ryan_Marcos_Amaral_Silva/calculadoramvc/src/main/resources/templates/page.qute.html
@@ -11,20 +11,20 @@
     </style>
 </head>
 <body>
-    <form action="/calc" method="POST">
+    <form action="/calculadora" method="POST">
         <div id="main">
             <h1>Calculadora</h1>
             <input type="number" name="valor1" placeholder="1º valor"><br>
             <input type="number" name="valor2" placeholder="2º valor"><br>
             <h3>Selecione a operação</h3>
-            <select name="operacao">
+            <select name="op">
                 <option value="+">Adição</option>
                 <option value="-">Subtração</option>
                 <option value="*">Multiplicação</option>
                 <option value="/">Divisão</option>
             </select><br>
             <button type="submit">Calcular</button><br>
-            <h2>Resultado: {result}</h2>
+            <h2>Resultado: {resultado}</h2>
         </div>
     </form>
 </body>
