--- a/Alessandra_Estephany_Genocchio/calculadoramvc/src/main/resources/templates/page.html
+++ b/Alessandra_Estephany_Genocchio/calculadoramvc/src/main/resources/templates/page.html
@@ -4,61 +4,109 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculadora</title>
-    <style>
-        body {
-            background: rgb(2, 0, 36);
-            background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(229, 41, 145, 1) 35%, rgba(0, 212, 255, 1) 100%);
-        }
-
-        .box {
-
-            background-color: #F0F8FF;
-            max-width: 250px;
-            border-radius: 15px;
-        }
-
-        select,
-        button {
-            font-size: 10px;
-            width: 170px;
-        }
-
-        h2,
-        label {
-            font-size: 10px;
-            font-family: arial;
-            color: #CE11EF;
-            position: center;
-        }
-    </style>
 </head>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background: linear-gradient(137deg, rgb(139 136 189) 0%, rgba(229, 41, 145, 1) 50%, rgb(157 192 199) 110%);
+    }
 
+    .container-box {
+        width: 300px;
+        height: 250px;
+        text-align: center;
+        background-color: #F0F8FF;
+        border-radius: 10px;
+        padding: 30px 10px 15px 10px;
+    }
+
+    input,select,button{
+        margin: 10px 20px 10px 20px;
+        width: 230px;
+        height: 30px;
+        border: 0.5px solid gray;
+        boder:none;
+        border-radius: 5px;
+        font-size: 12px;
+        cursor:pointer;
+        font-family: Arial, Helvetica, sans-serif;
+        transition: background-color 0.3s ease;
+    }
+    input,select,button,label:focus {
+        outline:none;
+    }
+
+    label{
+        font-size:13px;
+        color:#ac287b;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight:bold;
+    }
+    button{
+        margin-top:20px;
+        border-radius: 5px;
+        height:30px;
+        background-color: #ffff;
+        font-weight:bold;
+    }
+    select{
+        height:25px;
+    }
+    button:hover{
+        background-color:#06748E;
+        color:white;
+    }
+    input:hover{
+        border: 2px solid #06748E;
+    }
+    .logo{
+        width: 60px;
+        height: 60px;
+        position: absolute;
+        margin:-20px 0 0 280px;
+        animation: loading 3s forwards infinite;
+    }
+
+    @keyframes loading {
+        0% {
+            transform: rotate(0);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+    p{
+        color: white;
+        margin: 0;
+        font-size: 20px;
+    }
+
+</style>
 <body>
-    <form method="post" action="/result">
-        <div class="box">
+<form method="post" action="/result">
+    <div class="container">
+        <img class="logo" src="https://i.imgur.com/RwqQtcy.png" alt="Logo curso Eng. Software FAG"/>
+        <div class="container-box">
             <label> Insira o primeiro número </label>
-            <br>
             <input type="text" name="valor1">
-            <br>
-            <br>
             <label> Insira o segundo número </label>
-            <br>
             <input type="text" name="valor2">
-            <br><br>
-            <select id="operador" name="operador">
+            <select id="operador" name="operador" class="text">
                 <option value="soma"> Soma </option>
                 <option value="substracao"> Subtração </option>
                 <option value="divisao"> Divisão </option>
                 <option value="multiplicacao"> Multiplicação</option>
             </select>
-            <br><br>
             <button>Calcular</button>
         </div>
+    </div>
+</form>
 
-    </form>
-
-
-    <p>Create your web page using Quarkus RESTEasy & Qute</p>
 </body>
 
 </html>
